2013-12-06  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* syscalls.cc (dup): Use cygheap_fdnew properly.

2013-12-05  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygheap.h (cygheap_fdnew): Avoid setting errno directly since it will
	have been set by a previous function.
	* dtable.h (dtable::extend): Accept second size_t argument.
	* dtable.cc (dtable::extend): Accept second "min" argument which allows
	checking for OPEN_MAX_MAX boundary conditions.
	(dtable_init): Accommodate second argument to dtable::extend.
	(dtable::find_unused_handle): Ditto.
	* syscalls.cc (setdtablesize): Ditto.
	(dup): Return any error passed by cygheap_fdnew() directly.
	(getdtablesize): Just return dtable size directly.

2013-12-04  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.cc (dtable::find_unused_handle): When extending, always make
	sure that there is a NOFILE_INCR chunk following the free fd.

2013-12-03  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* select.cc (select): Add workaround for, as yet undebugged,
	pathological case.

2013-12-01  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.cc (dtable::find_unused_handle): Break out of the right loop.

2013-12-01  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.cc (dtable::find_unused_handle): Fix off-by-one error.  Always
	exit through the bottom.
	(cygwin_attach_handle_to_fd): Make sure that fd tab is locked for the
	duration of this function.
	* dtable.h (dtable::lock): Make public.
	(dtable::unlock): Ditto.
	(dtable): Remove friends.

2013-12-01  Corinna Vinschen  <corinna@vinschen.de>

	* dtable.cc (dtable::extend): Change local variable new_size to size_t
	as well.

	* thread.cc: Fix comment.

2013-11-30  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* dtable.h (dtable::first_fd_for_open): Change declaration to size_t.
	(dtable::extend): Change parameter to size_t.
	(dtable::find_unused_handle): Ditto.
	* dtable.cc: Remove now-unused header.